--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,15 @@
 html, body {
-  max-width: 1920px;
   padding: 0;
   margin: 0;
+  /*max-width: 1920px;*/
 }
-
+.container {
+  max-width: 1920px;
+  width: 100%;
+}
+input {
+  font-size: 16px;
+}
 * {
 	font-family: "Blatant", sans-serif;
 
@@ -22,6 +28,7 @@ a {
 	padding: 34px 0;
 	background-color: #2a2c2f;
   height: auto;
+  width: 100%;
 }
 .company-logo {
     width: 23%;
@@ -295,6 +302,7 @@ img.logos {
     color: #ccc;
     border-radius: 6px;
     padding: 8px 21px;
+    font-size: 22px;
 }
 .box3-item-info {
     color: #747070;
@@ -309,9 +317,9 @@ img.logos {
     width: 100%;
 }
 
-.__item .box3 span {
-    font-size: 20px;
-    /*margin-top: 20px;*/
+.__item .box3 .box3-info{
+    font-size: 23px;
+    line-height: 28px;
 }
 .items-container {
     display: flex;
@@ -409,6 +417,7 @@ span.product-name {
 }
 span.product-title {
     margin-top: 10px;
+    font-size: 22px;
 }
 .mySlides {
     filter: brightness(50%);
@@ -1062,19 +1071,15 @@ button.btn.btn-success.btn-block {
 }
 /*end login*/
 
-<<<<<<< HEAD
 a#show-address {
     position: relative;
     left: 90px;
 }
 
-
-/*end login*/
-=======
 #slider-range {
     background: #ccc;
     width: 72%;
-    height: 6px;
+    height: 3px;
 }
 .ui-slider-range.ui-corner-all.ui-widget-header {
     background: #c4a256;
@@ -1082,8 +1087,20 @@ a#show-address {
 #slider-range span {
     background: #C4A265;
     border-radius: 50%;
-    height: 13px;
-    width: 13px;
+    height: 10px;
+    width: 10px;
     outline: none;
 }
->>>>>>> 010bbe9320725ce7d5c51d337b87edfab3d61cb8
+button.filter-by-price {
+    padding: 10px 25px;
+    background: none;
+    border-colo: #c4a256;
+    border: solid #c4a256;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+}
+button.filter-by-price:hover {
+    color: #fff;
+    background: #c4a256;
+}
