--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -290,7 +290,7 @@
 }
 @media (max-width: 768px){
 	.mobile-menu {
-    	width: 20%;
+	    width: 23%;
 	}
 	.dropdown-content-account {
 	    font-size: 31px;
@@ -333,29 +333,32 @@
 	    height: auto;
 	    display: flex;
         width: 100%;
+        justify-content: space-between;
 	}
 	.headmenu .icons {
 	    position: unset; 
-        width: 25%;
+        width: 33%;
         padding: 25px 39px 22px 10px;
         display: flex;
         justify-content: flex-end;
-        margin-top: 56px;
-        margin-left: 65px;
+        /*margin-top: 56px;
+        margin-left: 65px;*/
+        /*height: 100%;*/
+        align-self: center;
 	}
 	.headmenu .des1{
 		position: unset;
-		font-size: 32px;
-		display: none;
+	    font-size: 42px;
+		/*display: none;*/
 	}
 	.company-logo {
-	    width: 50%;
+        width: 60%;
 		display: flex;
-	    padding: 10px 36px;
+        padding: 10px 20px;
         justify-content: end;
 	}
 	span.des-logo {
-        width: 60%;
+        width: 47%;
 	    text-align: center;
 	}
 	.des-logo img {
@@ -365,15 +368,17 @@
 	    color: #c4a265;
 	    /*position: absolute;*/
      	left: unset; 
-	    font-size: 36px;
+        font-size: 27px;
 	    top: 84px;
 	    /*margin-left: 152px;*/
-	    width: 32%;
+        width: 100%;
 	    font-weight: bold;
 	}
 	.company-title {
 	    padding: 25px 0;
 	    /*display: none;*/
+        align-self: center;
+        width: 59%;
 	}
 	.headmenu .icons .icons2 {
        width: 4.125rem;
@@ -398,16 +403,17 @@
 	button.menu-toggle {
    	 /* width: 13%; */
 	    width: 100%;
-	    height: 106px;
-	    margin: 14px 0;
+        height: 75px;
 	    font-size: 39px;
 	    color: #fff;
 	    /*border: solid #B89352;*/
 	    /*background-color: #2a2c2f;*/
 	    background-color: #c4a265;
-        border-radius: 16px;
+        border-radius: 9px;
         outline: none;
-        margin-top: 60px
+	}
+	.dropdown-account {
+    	width: 27%;
 	}
 	.topnav {
 		background-color: #2a2c2f;
@@ -778,7 +784,7 @@
 }
 @media (max-width: 500px) {
 	button.menu-toggle {
-		margin-top: 70px;
+		/*margin-top: 70px;*/
 		font-size: 44px;
 	}
 	.des-logo img {
@@ -788,7 +794,8 @@
 		margin-left: 57px;
 	}
 	.headmenu .des1 {
-		font-size: 37px;
+		/*font-size: 37px;*/
+	    font-size: 55px;
 	}
 	.headmenu .des2 {
     	font-size: 39px;
@@ -1036,6 +1043,12 @@
 	.shop-imgs {
 		width: 100%;
 	}
+	span.des-logo {
+	    width: 54%;
+	}
+	.company-logo {
+	    width: 69%;
+	}
 
 
 }
@@ -1091,7 +1104,7 @@
 	    margin-top: 16px;
 	}
 	.sales1 {
-	    width: 43%;
+        width: 71%;
 	    top: 24%
 	}
 	.dropdown-content-account {
@@ -1116,7 +1129,7 @@
 	}
 	button.menu-toggle {
 	    font-size: 46px;
-	    margin-top: 75px;	
+	    /*margin-top: 75px;	*/
 	}
 	.col-sm-4 {
 		width: 50%;
@@ -1135,7 +1148,7 @@
 		width: 1440px;
 	}
 	.headmenu {
-    	display: block;
+	    display: flex;
     	height: auto;
        	padding: 61px 0;
 	}	
@@ -1147,7 +1160,7 @@
 	    margin: 0;
 	}
 	.mobile-menu {
-   		width: 100%;
+        width: 22%;
     	text-align: -webkit-center;
 	}
 	.des-logo img {
@@ -1162,7 +1175,7 @@
     	position: unset;
 	}
 	.headmenu .des-logo .logos {
-	    margin-left: 98px;
+	    /*margin-left: 98px;*/
 	    margin-top: -30px;
 	}
 	.dropdown-content-account {
@@ -1180,25 +1193,25 @@
 	    font-size: 47px;
 	}
 	span.des-logo {
-   		width: 100%;
+	    width: 70%;
     	text-align: center;
 	}
 	button.menu-toggle {
-    	width: 24%;
-    	height: 135px;
-	    margin: 90px 0;
+        width: 100%;
+        height: 6.6875rem;
+	    /*margin: 90px 0;*/
 	    font-size: 50px;
         border-radius: 13px;
 	}
 	.search-icon img {
-    	width: 60px;
-	    height: 64px;
+    	width: 5.9375rem;
+    	height: 5.9375rem;
 	}
 	.headmenu .icons .icons3 {
-   		width: 80px;
+	    width: 6.6875rem;
 	}
 	.headmenu .icons .icons2 {
-    	width: 71px;
+	    width: 6.4375rem;
 	}
 	.toggle-cart-sidenav img {
 	    display: none;
@@ -1516,5 +1529,8 @@
 	}
 	#Btop img {
 	    height: 121px;
+	}
+	.dropdown-account {
+        width: 20%;
 	}
 }
